# backend/openapi/api.go
@@ -21,6 +21,7 @@ import (
 // The DefaultAPIRouter implementation should parse necessary information from the http request,
 // pass the data to a DefaultAPIServicer to perform the required actions, then write the service results to the http response.
 type DefaultAPIRouter interface { 
+	EventsEventIdAttendancePost(http.ResponseWriter, *http.Request)
 	EventsEventIdGet(http.ResponseWriter, *http.Request)
 	EventsEventIdRequestTicketCredentialPost(http.ResponseWriter, *http.Request)
 	EventsGet(http.ResponseWriter, *http.Request)
@@ -42,6 +43,7 @@ type DefaultAPIRouter interface {
 // while the service implementation can be ignored with the .openapi-generator-ignore file
 // and updated with the logic required for the API.
 type DefaultAPIServicer interface { 
+	EventsEventIdAttendancePost(context.Context, string, RecordAttendanceRequest) (ImplResponse, error)
 	EventsEventIdGet(context.Context, string) (ImplResponse, error)
 	EventsEventIdRequestTicketCredentialPost(context.Context, string) (ImplResponse, error)
 	EventsGet(context.Context) (ImplResponse, error)
